--- a/src/DeepLearning_GridSearch.ipynb
+++ b/src/DeepLearning_GridSearch.ipynb
@@ -940,26 +940,88 @@
       "Let's use [0, 1, 2, 3] GPUs!\n",
       "ResNet101Attention_Inp512-DatasetMeanStd-Data0.005-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "Epoch 1/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.4076 KAPPA: 0.0000\n",
-      "val Loss: 0.3620 KAPPA: -0.0000\n",
-      "Saving the best model at /mnt/diabetic_retinopathy/models\n",
-      "Epoch time elapsed: 2m 21s\n",
-      "\n",
-      "Epoch 2/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.3715 KAPPA: 0.0369\n",
-      "val Loss: 0.3516 KAPPA: 0.0086\n",
-      "Saving the best model at /mnt/diabetic_retinopathy/models\n",
-      "Epoch time elapsed: 2m 7s\n",
-      "\n",
       "Epoch 3/9\n",
       "----------\n",
       "Learning Rate: 0.0001\n",
-      "train Loss: 0.3700 KAPPA: 0.1367\n"
+      "train Loss: 0.4019 KAPPA: 0.0000\n",
+      "val Loss: 0.3609 KAPPA: 0.0000\n",
+      "Epoch time elapsed: 2m 21s\n",
+      "\n",
+      "Epoch 4/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3712 KAPPA: 0.0597\n",
+      "val Loss: 0.3486 KAPPA: 0.0324\n",
+      "Saving the best model at /mnt/diabetic_retinopathy/models\n",
+      "Epoch time elapsed: 2m 4s\n",
+      "\n",
+      "Epoch 5/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3717 KAPPA: 0.1276\n",
+      "val Loss: 0.3499 KAPPA: 0.0929\n",
+      "Epoch time elapsed: 2m 6s\n",
+      "\n",
+      "Epoch 6/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3539 KAPPA: 0.1827\n",
+      "val Loss: 0.3501 KAPPA: 0.0766\n",
+      "Epoch time elapsed: 2m 5s\n",
+      "\n",
+      "Epoch 7/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3439 KAPPA: 0.2239\n",
+      "val Loss: 0.3899 KAPPA: 0.1809\n",
+      "Epoch time elapsed: 2m 7s\n",
+      "\n",
+      "Epoch 8/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3483 KAPPA: 0.2349\n",
+      "val Loss: 0.3546 KAPPA: 0.2503\n",
+      "Epoch time elapsed: 2m 4s\n",
+      "\n",
+      "Epoch 9/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3304 KAPPA: 0.2670\n",
+      "val Loss: 0.3206 KAPPA: 0.3899\n",
+      "Saving the best model at /mnt/diabetic_retinopathy/models\n",
+      "Epoch time elapsed: 2m 6s\n",
+      "\n",
+      "Training complete in 14m 52s\n",
+      "Best val loss: 0.320570\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet50-19c8e357.pth\" to /home/ubuntu/.cache/torch/checkpoints/resnet50-19c8e357.pth\n",
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's use [0, 1, 2, 3] GPUs!\n",
+      "ResNet50Attention_Inp512-DatasetMeanStd-Data0.005-Bch64-ResNet50AttentionPre-None-Adam0001-SmoothL1Loss\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Epoch 0/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.4277 KAPPA: 0.0000\n",
+      "val Loss: 0.3718 KAPPA: 0.0000\n",
+      "Saving the best model at /mnt/diabetic_retinopathy/models\n",
+      "Epoch time elapsed: 1m 46s\n",
+      "\n",
+      "Epoch 1/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n",
+      "train Loss: 0.3869 KAPPA: 0.0000\n"
      ]
     },
     {
@@ -970,7 +1032,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-16-5ba3d0641118>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m                                 \u001b[0mis_inception\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNET_LIST\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is_inception'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m                                 \u001b[0msave_best\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'save_best'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m                                 \u001b[0mmetric\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'metric'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m                                 )\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-15-bfcc7e47d548>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, model_name, model_dir, loss_name, dataloaders, criterion, optimizer, scheduler, num_epochs, next_epoch, best_score, is_inception, save_best, metric)\u001b[0m\n\u001b[1;32m     64\u001b[0m                         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m                         \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalcLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m                     \u001b[0;31m# backward + optimize only if in training phase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-d834204d8590>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, model_name, model_dir, loss_name, dataloaders, criterion, optimizer, scheduler, num_epochs, next_epoch, best_score, is_inception, save_best, metric)\u001b[0m\n\u001b[1;32m     64\u001b[0m                         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m                         \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalcLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m                     \u001b[0;31m# backward + optimize only if in training phase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m<ipython-input-12-7424ff28dd2a>\u001b[0m in \u001b[0;36mcalcLoss\u001b[0;34m(criterion, loss_name, outputs, labels)\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0monehot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNUM_CLASSES\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreds_metric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/python3/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/python3/lib/python3.6/site-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    780\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    781\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 782\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msmooth_l1_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    783\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    784\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1084,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
